--- a/index.html
+++ b/index.html
@@ -23,11 +23,34 @@
         Model is trained on
         <br>
         <div class="btn btn-warning heading_div2">
-          Mother | Father | Grandmother | Me | 
+          Mother | Father | Me | 
         </div>
       </div>  
     </center>
   </h3>
+  <br>
+  </h3>
+  <br><br>
+
+  <p class="btn btn-warning  result_para_tag">Object:
+      <span id="result_object_name"></span>
+  </p>
+  <br>
+  <br>
+  <p class="btn btn-warning  result_para_tag">Accuracy:
+    <span id="result_object_accuracy"   ></span>
+  </p>
+</center>
+
+<div class="copy_right_footer">
+  Developed by Arya Pawar(Student of WhiteHatJr)
+</div>
+
+<script src="main.js"></script>
+</body>
+
+</html>
+
 </center>
 <br>
 <script src="main.js"></script>
